# nonebot-plugin-ai-groupmate

./: .gitignore  README.md  pyproject.toml
mem0_api/: .env.example  README.md  docker-compose.yml  main.py  requirements.txt
nonebot_plugin_ai_groupmate/: __init__.py  config.py  favorability.py  mem0_client.py  mem0_sync.py  memory.py  model.py  utils.py  vlm.py
nonebot_plugin_ai_groupmate/agent/: __init__.py  voice_tool.py
nonebot_plugin_ai_groupmate/migrations/: 811f4ae4bcd1_add_group_memory.py  a1b2c3d4e5f6_add_chathistory_composite_index.py  b3c9d8a7f102_add_blocked_to_media.py  c7f99f9f4e21_rebuild_userrelation_v2.py  d2a4f3bc1b9e_add_daily_loss_used_to_userrelation_v2.py  e1a6f4d3c2b8_scale_daily_units_to_raw.py  f4b7c2d1a9e0_add_mem0_synced_to_chathistory.py
nonebot_plugin_ai_groupmate/milvus/: __init__.py
scripts/: backfill_mem0_history.py  rebuild_qdrant_vectors.py
server/: app.py  app_server.py  requirements.txt
src/nonebot_plugin_ai_groupmate/: config.py
src/nonebot_plugin_ai_groupmate/agent/: __init__.py
